# mysql-csv-import

./: .env-sample  .gitignore  .pylintrc  README.md  buildme.sh  mysql-csv-import-cli.py  mysql-csv-import.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
mysql_csv_import/: main.py
mysql_csv_import/tests/: test_main.py
mysql_csv_import/tests/data/: test.sql
tests/: test_main.py
tests/data/: test.csv
